--- a/style.css
+++ b/style.css
@@ -4,17 +4,24 @@
     font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
 }
+
+p:after {
+    content: "\00a0"; /* Unicode character for non-breaking space */
+    display: block;
+    white-space: pre; /* Preserve whitespace */
+}
+
 html{
     scroll-behavior: smooth;
 }
 body{
-    background: black;
-    color: #fff;
+    background: white;
+    color: grey;
 }
 #header{
     width: 100%;
-    height: 110vh; /* change here */
-    background-image: url(images/ok_4.jpg);
+   /* height: 110vh;*/ /* change here */
+/*    background-image: url(images/ok_4.jpg);*/
     /* background-size: cover;
     background-position: center; */
     background-repeat: no-repeat;
@@ -56,7 +63,7 @@ body{
     -webkit-animation-name: fadeInUp;
 }
 .container{
-    padding: 10px 10%;
+/*    padding: 10px 10%; */
     /* padding: 0px 10%; */
 }
 nav{
@@ -64,6 +71,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+/*    background: grey;*/
 }
 .logo{
     width: 140px;
@@ -85,7 +93,8 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #fff;
+/*    color: #fff;*/
+    color: black;
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -104,7 +113,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
+/*    margin-top: 20%;*/
     font-size: 30px;
 }
 .header-text h1{
@@ -119,7 +128,7 @@ nav ul li a:hover::after{
 /* -------about-------- */
 #about{
     /* padding: 80px 0; */
-    padding: 40px 0;
+/*    padding: 40px 0;*/
     color: #ababab;
 }
 .row{
@@ -140,8 +149,7 @@ nav ul li a:hover::after{
 .sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: white; 
-    /* color: #fff; */
+     color: black; 
 /*    background: linear-gradient(90deg, rgb(154, 59, 218) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
@@ -186,6 +194,7 @@ nav ul li a:hover::after{
     display: block;
 }
 /* -------services--------- */
+/*
 #services{
     padding: 30px 0;
 }
@@ -223,6 +232,7 @@ nav ul li a:hover::after{
     background: #ff004f;
     transform: translate(-10px);
 }
+*/
 #portfolio{
     padding: 50px 0;
 }
@@ -312,6 +322,7 @@ nav ul li a:hover::after{
     margin-right: 15px;
     font-size: 25px;
 }
+/*
 .social-icons{
     margin-top: 30px;
 }
@@ -334,6 +345,8 @@ nav ul li a:hover::after{
 .contact-right form{
     width: 100%;
 }
+*/
+/*
 form input,form textarea{
     width: 100%;
     border: 0;
@@ -351,6 +364,7 @@ form .btn2{
     margin-top: 20px;
     cursor: pointer;
 }
+*/
 .copyright{
     width: 100%;
     text-align: center;
@@ -368,7 +382,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/back_new.jpg);
+/*        background-image: url(images/back_new.jpg); */
     }
     .header-text{
         /* margin-top: 670px;
@@ -433,7 +447,7 @@ nav .fa-solid{
     }
     #header{
         width: 100%;
-        height: 110vh; /* change here */
+/*        height: 110vh; *//* change here */
         /* background-size: cover; */
         /* background-position: center; */
         background-size: 110%;
