--- a/style.css
+++ b/style.css
@@ -85,10 +85,10 @@ justify-content: center;
     background: black;
     
 
-     position: fixed;
+    position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333; /* Adjust the background color as needed */
+    background-color: black; /* Adjust the background color as needed */
     padding: 10px; /* Add padding for better visibility */
     z-index: 1000; /* Ensure it stays on top of other elements */
 
@@ -99,10 +99,10 @@ justify-content: center;
     font-size: 15px;
 }
 
-
 .logo{
-    width: 140px;
+    width: 100px;
 }
+
 nav ul li{
     display: inline-block;
     list-style: none;
