--- a/style.css
+++ b/style.css
@@ -19,6 +19,33 @@ body{
     background: white;
     color: grey;
 }
+
+.containerMain {
+            display: flex;
+            max-width: 800px;
+            margin: 50px auto;
+          /*  background-color: #f0f0f0;*/
+            padding: 20px;
+        }
+
+        .text-box {
+            flex: 1;
+            padding-right: 20px;
+        }
+
+        .image-box {
+            flex: 1;
+            text-align: center;
+        }
+
+        .image-box img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+
+
 #header{
     width: 100%;
    /* height: 110vh;*/ /* change here */
@@ -441,6 +468,7 @@ nav .fa-solid{
         /* background-position: center; */
         background-size: 110%;
     }
+
 
 /*
 
