--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+
+    /* Style for the main list */
+    ul {
+      
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Style for list items in the main list */
+    li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for the sublist */
+    ul ul {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+    }
+
+    /* Style for list items in the sublist */
+    ul ul li {
+      margin-left: 20px; /* Adjust the value to control the indentation */
+      position: relative;
+    }
+
+    /* Style for normal links */
+    a {
+      color: blue; /* Set the default color of the links */
+      text-decoration: none; /* Remove underline for better styling */
+      transition: color 0.3s; /* Add a smooth transition effect for color change */
+    }
+
+    /* Style for links when hovered over */
+    a:hover {
+      color: red; /* Set the color for the links when hovered over */
+    }
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -213,180 +252,7 @@ nav ul li a:hover::after{
 	-webkit-background-clip: text;
     */
 }
-/*
-.tab-titles{
-    display: flex;
-    margin: 20px 0 40px;
-}
-.tab-links{
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-}
-.tab-links::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
-}
-.tab-links.active-link::after{
-    width: 50%;
-}
-.tab-contents ul li{
-    list-style: none;
-    margin: 10px 0;
-}
-.tab-contents ul li span{
-    color: #ff004f;
-    font-size: 14px;
-}
-.tab-contents{
-    display: none;
-}
-.tab-contents.active-tab{
-    display: block;
-}
-*/
-/* -------services--------- */
-/*
-#services{
-    padding: 30px 0;
-}
-.services-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-.services-list div{
-    background: #262626;
-    padding: 40px;
-    font-size: 13px;
-    font-weight: 300;
-    border-radius: 10px;
-    transition: background 0.5s, transform 0.5s;
-}
-.services-list div i{
-    font-size: 50px;
-    margin-bottom: 30px;
-}
-.services-list div h2{
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 15px;
-}
-.services-list div a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 12px;
-    margin-top: 20px;
-    display: inline-block;
-}
-.services-list div:hover{
-    background: #ff004f;
-    transform: translate(-10px);
-}
-*/
 
-/*
-#portfolio{
-    padding: 50px 0;
-}
-.work-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-.work{
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-}
-.work img{
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-    transition: transform 0.5s;
-}
-.layer{
-    width: 100%;
-    height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 14px;
-    transition: height 0.5s;
-}
-.layer h3{
-    font-weight: 500;
-    margin-bottom: 20px;
-}
-.layer a{
-    margin-top: 20px;
-    color: #ff004f;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 60px;
-    background: #fff;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    text-align: center;
-}
-.work:hover img{
-    transform: scale(1.1);
-}
-.work:hover .layer{
-    height: 100%;
-}
-.btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #ff004f;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
-}
-.btn:hover{
-    background: #ff004f;
-}
-*/
-/* ------contact------ */
-/*
-.contact-left{
-    flex-basis: 35%;
-}
-.contact-right{
-    flex-basis: 60%;
-}
-.contact-left p{
-    margin-top: 30px;
-}
-.contact-left p i{
-    color: #ff004f;
-    margin-right: 15px;
-    font-size: 25px;
-}
-*/
 .copyright{
     width: 100%;
     text-align: center;
@@ -409,7 +275,7 @@ nav .fa-solid{
     .header-text{
         /* margin-top: 670px;
         font-size: 16px; */
-        margin-top: 450px;
+/*        margin-top: 450px;*/
         font-size: 25px;
     }
     .header-text h1{
@@ -478,63 +344,3 @@ nav .fa-solid{
 
 
 
-
-
-
-/*
-
-    @keyframes fadeInUp {
-        from {
-            transform: translate3d(0,40px,0)
-        }
-    
-        to {
-            transform: translate3d(0,0,0);
-            opacity: 1
-        }
-    }
-    @-webkit-keyframes fadeInUp {
-        from {
-            transform: translate3d(0,100px,0)
-        }
-    
-        to {
-            transform: translate3d(0,0,0);
-            opacity: 1
-        }
-    }
-    .animated {
-        animation-duration: 2.5s;
-        animation-fill-mode: both;
-        -webkit-animation-duration: 2.5s;
-        -webkit-animation-fill-mode: both
-    }
-    .animatedFadeInUp {
-        opacity: 0
-    }
-    .fadeInUp {
-        opacity: 0;
-        animation-name: fadeInUp;
-        -webkit-animation-name: fadeInUp;
-    }
-}
-*/
-/*
-#wait-msg{
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
-    padding-bottom: 6%;
-}
-
-#msg{
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
-}
-@media (max-width: 600px) {
-     #msg {
-        padding-top: 7%;
-    }
-}
-*/
