--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ nav .fa-solid{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+/*        background: #ff004f; */
         position: fixed;
         top: 0;
         right: -200px;
